--- a/Simple Calculator.ipynb
+++ b/Simple Calculator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5118a74a",
    "metadata": {},
    "outputs": [
@@ -10,10 +10,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the first number: 1\n",
-      "Enter the operator (+, -, *, /): +\n",
-      "Enter the second number: 2\n",
-      "Result: 3.0\n"
+      "Enter the first number: 2\n",
+      "Enter the operator (+, -, *, /): /\n",
+      "Enter the second number: 0\n",
+      "Error: Division by zero is not allowed.. Can not divide by zero.\n"
      ]
     }
    ],
