Update Library Book Management.ipynb

--- a/Library Book Management.ipynb
+++ b/Library Book Management.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "39bf0e84",
+   "id": "ee75c2d1",
    "metadata": {
     "scrolled": true
    },
@@ -61,15 +61,15 @@
     "    return checkout_details\n",
     "\n",
     "def get_input():\n",
-    "    librarian_name = input(\"Enter the librarian's name: \")\n",
-    "    book_titles = [book.strip() for book in input(\"Enter the book titles (separated by commas): \").split(',')]\n",
-    "    duration = input(\"Enter the checkout duration (press Enter for default '2 weeks'): \") or '2 weeks'\n",
+    "    librarian_name = input(\"The librarian's name: \")\n",
+    "    book_titles = [book.strip() for book in input(\"Books titles (separated by commas): \").split(',')]\n",
+    "    duration = input(\"Checkout duration (press Enter for default '2 weeks'): \") or '2 weeks'\n",
     "    \n",
-    "    late_fee_input = input(\"Enter the late fee per day (press Enter for no late fee): \").strip()\n",
+    "    late_fee_input = input(\"Late fee per day (press Enter for no late fee): \").strip()\n",
     "    late_fee = '{:.2f}'.format(float(late_fee_input)) if late_fee_input else 0.0\n",
     "    \n",
-    "    renewals_allowed = int(input(\"Enter the number of renewals allowed (press Enter for no renewals): \") or 0)\n",
-    "    special_conditions = [condition.strip() for condition in input(\"Enter any special conditions (separated by commas, press Enter for none): \").split(',') if condition.strip()]\n",
+    "    renewals_allowed = int(input(\"Number of renewals allowed (press Enter for no renewals): \") or 0)\n",
+    "    special_conditions = [condition.strip() for condition in input(\"Any special conditions (separated by commas, press Enter for none): \").split(',') if condition.strip()]\n",
     "\n",
     "    return librarian_name, book_titles, duration, {'late_fee': late_fee, 'renewals_allowed': renewals_allowed, 'special_conditions': special_conditions}\n",
     "\n",
