Update Library Book Management

--- a/Library Book Management.ipynb
+++ b/Library Book Management.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "ee75c2d1",
+   "execution_count": 16,
+   "id": "18eb5a11",
    "metadata": {
     "scrolled": true
    },
@@ -12,20 +12,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the librarian's name: Muhd Aqil \n",
-      "Enter the book titles (separated by commas): Book of Jungle, Kamus Oxfords\n",
-      "Enter the checkout duration (press Enter for default '2 weeks'): 3 weeks\n",
-      "Enter the late fee per day (press Enter for no late fee): 0.2\n",
-      "Enter the number of renewals allowed (press Enter for no renewals): 2\n",
-      "Enter any special conditions (separated by commas, press Enter for none): Handle with care \n",
+      "The librarian's name: Muhd Aqil \n",
+      "Books titles : Books of Jungle, Oxford Fajar\n",
+      "Checkout duration (press Enter for default '2 weeks'): 2 Weeks\n",
+      "Late fee per day (press Enter for no late fee): 0.3\n",
+      "Number of renewals allowed (press Enter for no renewals): 2\n",
+      "Any special conditions (press Enter for none): Handle with care \n",
       "------------------------------------------------------\n",
       "Checkout Processed by: Muhd Aqil \n",
       "Books Checked Out:\n",
-      "- Book of Jungle\n",
-      "- Kamus Oxfords\n",
-      "Checkout Duration: 3 weeks\n",
+      "- Books of Jungle\n",
+      "- Oxford Fajar\n",
+      "Checkout Duration: 2 Weeks\n",
       "Additional Checkout Details:\n",
-      "- Late Fee: $0.20 per day\n",
+      "- Late Fee: $0.30 per day\n",
       "- Renewals Allowed: 2\n",
       "- Special Conditions: Handle with care\n",
       "\n"
@@ -62,14 +62,14 @@
     "\n",
     "def get_input():\n",
     "    librarian_name = input(\"The librarian's name: \")\n",
-    "    book_titles = [book.strip() for book in input(\"Books titles (separated by commas): \").split(',')]\n",
+    "    book_titles = [book.strip() for book in input(\"Books titles : \").split(',')]\n",
     "    duration = input(\"Checkout duration (press Enter for default '2 weeks'): \") or '2 weeks'\n",
     "    \n",
     "    late_fee_input = input(\"Late fee per day (press Enter for no late fee): \").strip()\n",
     "    late_fee = '{:.2f}'.format(float(late_fee_input)) if late_fee_input else 0.0\n",
     "    \n",
     "    renewals_allowed = int(input(\"Number of renewals allowed (press Enter for no renewals): \") or 0)\n",
-    "    special_conditions = [condition.strip() for condition in input(\"Any special conditions (separated by commas, press Enter for none): \").split(',') if condition.strip()]\n",
+    "    special_conditions = [condition.strip() for condition in input(\"Any special conditions (press Enter for none): \").split(',') if condition.strip()]\n",
     "\n",
     "    return librarian_name, book_titles, duration, {'late_fee': late_fee, 'renewals_allowed': renewals_allowed, 'special_conditions': special_conditions}\n",
     "\n",
@@ -79,6 +79,14 @@
     "print('------------------------------------------------------')\n",
     "print(result)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88a5eb9a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
